# django-inertia-vite-starterkit

./: .copier-answers.yml  .gitignore  README.md  components.json  docker_startup.sh  package-lock.json  package.json  prod.Dockerfile  pyproject.toml  tsconfig.json  vite.config.js
core/: context_processors.py  settings.py
frontend/css/: main.css
frontend/js/: main.js
frontend/js/components/: Layout.vue
frontend/js/pages/: Index.vue
myproject/: settings.py
templates/: base.html
