[project]
name = 'django-inertia-vite-starterkit'
version = "0.1.0"
description = "A ready-to-use starter kit for building modern Django applications with Inertia.js, Vue 3, and Vite, including authentication, asset management, and production-ready settings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-environ>=0.11.2",
    "django>=5.1.4",
    "django-vite>=3.0.5",
    "inertia-django>=0.6.0",
    
    "django-allauth>=65.11.2",
    "whitenoise>=6.8.2",
    "gunicorn>=23.0.0",
]
